# lockbox

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.md  Makefile  NAMESPACE  README.md  README.qmd
R/: age.R  age_utils.R  extendr-wrappers.R  file.R  key.R  lockbox.R  secrets.R  sops.R  utils.R
docs/: CITATION.html  LICENSE.html  freeze.rds  index.html  quarto_website.yml  search.json
docs/man/: file_decrypt.html  file_encrypt.html  key_generate.R.html  key_generate.html  key_private.html  key_public.html  key_recipient.html  lockbox-package.html  lockbox_decrypt.html  lockbox_encrypt.html  lockbox_export.html  print.lockbox_key.html  secrets_decrypt.html  secrets_encrypt.html  secrets_export.html
inst/tinytest/: test-file_decrypt.R  test-key.R  (+2 more)
man/: age_decrypt.Rd  age_decrypt_key.Rd  age_decrypt_passphrase.Rd  age_encrypt.Rd  age_keygen.Rd  file_decrypt.Rd  file_encrypt.Rd  is_sops.Rd  key_generate.R.Rd  key_generate.Rd  key_private.Rd  key_public.Rd  key_recipient.Rd  lockbox-package.Rd  lockbox_decrypt.Rd  lockbox_encrypt.Rd  lockbox_export.Rd  print.lockbox_key.Rd  secrets_decrypt.Rd  secrets_decrypt_lockbox.Rd  secrets_decrypt_sops.Rd  secrets_encrypt.Rd  secrets_encrypt_lockbox.Rd  secrets_encrypt_sops.Rd  secrets_export.Rd  secrets_export_lockbox.Rd  secrets_export_sops.Rd  secrets_recipients.Rd  sops_decrypt.Rd  sops_encrypt.Rd  sops_export.Rd  sops_recipients.Rd  sops_run.Rd  string_decrypt.Rd  string_encrypt.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  lockbox-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: tinytest.R
(+3 files in other folders)
