[package]
name = 'lockbox'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'lockbox'

[dependencies]
extendr-api = '*'
age = { version = "0.11.1", features = ["armor"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
